--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.6",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
